src/test/deca/context/valid/ContextAvecObjet/Cast/booleanCastBoolean.deca
//Description
//  Cast d'un boolean en boolean
//
//Réponse
//  ok
{
    boolean a = true;
    boolean x = (boolean)(a);
}