src/test/deca/context/invalid/ContextAvecObjet/Cast/floatCastBoolean.deca
//Description
//  Cast d'un boolean en float
//
//Réponse
//  Erreur contextuelle ligne 9
//  un boolean ne peut pas être cast dans un float
{
    boolean a = true;
    float x = (float)(a);
}